--- a/Licensing/app.json
+++ b/Licensing/app.json
@@ -10,7 +10,14 @@
   "help": "",
   "url": "",
   "logo": "",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "id": "ad6962c2-8246-42fb-8983-a59264de25fc",
+      "name": "Common",
+      "publisher": "Bot Technologies",
+      "version": "1.0.0.0"
+    }
+  ],
   "screenshots": [],
   "platform": "1.0.0.0",
   "application": "22.0.0.0",
