Update app.json "runtime": "11.0"

--- a/Licensing/app.json
+++ b/Licensing/app.json
@@ -34,5 +34,6 @@
     "allowDebugging": true,
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
-  }
+  },
+  "runtime": "11.0"
 }
